--- a/components/PhotoSplit/PhotoSplit.module.css
+++ b/components/PhotoSplit/PhotoSplit.module.css
@@ -175,14 +175,15 @@
     order: 0;
   }
   .contentCol :global(.points) {
-    align-items: center;
+    align-items: flex-start;
+    text-align: left;
   }
   .photoCircle {
     left: 50%;
     right: auto;
-    margin-left: -39vw;
-    width: 78vw;
-    height: 78vw;
+    margin-left: -19.5vw;
+    width: 39vw;
+    height: 39vw;
     top: 2%;
   }
 }
